--- a/day01/.vscode/settings.json
+++ b/day01/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "editor.fontSize": 20,
     "files.associations": {
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "new": "cpp",
+        "ostream": "cpp"
     }
 }
