--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,6 +43,10 @@
         "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "map": "cpp",
+        "set": "cpp",
+        "strstream": "cpp",
+        "cinttypes": "cpp"
     }
 }
