--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,12 @@
         "concepts": "cpp",
         "numbers": "cpp",
         "list": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "condition_variable": "cpp",
+        "mutex": "cpp",
+        "chrono": "cpp",
+        "ctime": "cpp",
+        "ratio": "cpp",
+        "thread": "cpp"
     }
 }
